--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="fileOption">Оберіть спосіб завантаження файлу:</label>
         <div id="fileOption">
             <input type="radio" id="upload" name="fileOption" value="upload" checked> Завантажити файл<br>
-            <input type="radio" id="url" name="fileOption" value="url"> Вставити посилання на сайт
+            <input  type="radio" id="url" name="fileOption" value="url"> Вставити посилання на сайт
         </div>
         
         <input type="file" id="fileUpload" style="display: block; margin-top: 10px;">
@@ -24,11 +24,8 @@
 
         <label for="color">Оберіть колір пластику:</label>
         <select id="color" required>
-            <option value="white">Білий</option>
-            <option value="black">Чорний</option>
-            <option value="blue">Синій</option>
-            <option value="red">Червоний</option>
-            <option value="green">Зелений</option>
+            <option value="white">Зелений</option>
+           
         </select>
 
         <button type="button" onclick="sendOrder()">Надіслати замовлення</button>
