--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" id="name" placeholder="Ваше ім'я" required>
         <input type="text" id="telegram" placeholder="Ваш контакт в Telegram" required>
         
-        <label for="fileOption">Оберіть спосіб завантаження файлу:</label>
+        <label id="fileOption" for="fileOption">Оберіть спосіб завантаження файлу:</label>
         <div id="fileOption">
             <input type="radio" id="upload" name="fileOption" value="upload" checked> Завантажити файл<br>
             <input  type="radio" id="url" name="fileOption" value="url"> Вставити посилання на сайт
