Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   index.html
	modified:   script.js
	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     <h1>Замовлення на 3D-друк</h1>
     <form id="orderForm">
         <input type="text" id="name" placeholder="Ваше ім'я" required>
-        <input type="text" id="contact" placeholder="Ваш контактний номер або email" required>
-        <textarea id="description" placeholder="Опис моделі для друку" required></textarea>
+        <input type="text" id="telegram" placeholder="Ваш контакт в Telegram" required>
+        
+        <label for="fileOption">Оберіть спосіб завантаження файлу:</label>
+        <div id="fileOption">
+            <input type="radio" id="upload" name="fileOption" value="upload" checked> Завантажити файл<br>
+            <input type="radio" id="url" name="fileOption" value="url"> Вставити посилання на сайт
+        </div>
+        
+        <input type="file" id="fileUpload" style="display: block; margin-top: 10px;">
+        <input type="url" id="fileUrl" placeholder="Посилання на сайт" style="display: none; margin-top: 10px;">
+
+        <label for="color">Оберіть колір пластику:</label>
+        <select id="color" required>
+            <option value="white">Білий</option>
+            <option value="black">Чорний</option>
+            <option value="blue">Синій</option>
+            <option value="red">Червоний</option>
+            <option value="green">Зелений</option>
+        </select>
+
         <button type="button" onclick="sendOrder()">Надіслати замовлення</button>
     </form>
 
