--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <label for="color">Оберіть колір пластику:</label>
         <select id="color" required>
-            <option value="white">Зелений</option>
+            <option value="Green">Зелений</option>
            
         </select>
 
